# monitoring

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  showgraphs.ipynb
.github/workflows/: codeql-analysis.yml  mypy.yml  test_api.yml
config/: email.tmpl  generic.json.sample
etc/logrotate.d/: webmonitoring
etc/systemd/system/: webmonitoring.service.sample
lookyloo_monitoring/: capture_project.py
old/: run_captures.py
tests/: generic.json
tools/: 3rdparty.py  generate_sri.py  validate_config_files.py
webmonitoring/: capture_project.py  exceptions.py  helpers.py  mail.py  webmonitoring.py
webmonitoring/default/: __init__.py  abstractmanager.py  exceptions.py  helpers.py
website/web/: __init__.py  helpers.py  proxied.py  sri.txt
website/web/templates/: base.html  changes_tracking.html  collections.html  compare.html  expired.html  index.html  monitored.html
