[tool.poetry]
name = "webmonitoring"
version = "1.1.0"
description = "Monitoring websites, with Lookyloo as a backend."
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "BSD-3-Clause"

[tool.poetry.scripts]
start = "bin.start:main"
stop = "bin.stop:main"
update = "bin.update:main"
shutdown = "bin.shutdown:main"
run_backend = "bin.run_backend:main"
start_website = "bin.start_website:main"
monitoring_queue_manager = "bin.monitoring_queue_manager:main"
notification_manager = "bin.notification_manager:main"

run_captures = "bin.run_captures:main"
scripts_controller = "bin.scripts_controller:main"

[tool.poetry.dependencies]
python = "^3.10"
redis = {version = "^5.2.1", extras = ["hiredis"]}
flask-restx = "^1.3.0"
werkzeug = "^3.1.3"
gunicorn = "^23.0.0"
cron-converter = "^1.2.1"
bootstrap-flask = "^2.4.2"
pylookyloo = "^1.28.0"
flask-wtf = "^1.2.2"
flask-login = "^0.6.3"
defang = "^0.5.3"
psutil = "^7.0.0"
dateparser = "^1.2.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
types-redis = {version = "^4.6.0.20241004"}
types-requests = "^2.32.0.20250306"
types-psutil = "^7.0.0.20250218"
types-dateparser = "^1.2.0.20250208"

[tool.poetry.group.old]
optional = true

[tool.poetry.group.old.dependencies]
plotly = "^5.14.0"
jupyter-dash = "^0.4.2"
jupyterlab = "^4.2.5"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true
