[tool.poetry]
name = "webmonitoring"
version = "1.3.0"
description = "Monitoring websites, with Lookyloo as a backend."
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "BSD-3-Clause"

[tool.poetry.scripts]
start = "bin.start:main"
stop = "bin.stop:main"
update = "bin.update:main"
shutdown = "bin.shutdown:main"
run_backend = "bin.run_backend:main"
start_website = "bin.start_website:main"
monitoring_queue_manager = "bin.monitoring_queue_manager:main"
notification_manager = "bin.notification_manager:main"

run_captures = "bin.run_captures:main"
scripts_controller = "bin.scripts_controller:main"

[tool.poetry.dependencies]
python = "^3.10,<3.15"
redis = {version = "^5.3.0,<6.0", extras = ["hiredis"]}
flask-restx = "^1.3.2"
werkzeug = "^3.1.7"
gunicorn = "^25.2.0"
cron-converter = "^1.3.1"
bootstrap-flask = "^2.5.0"
pylookyloo = "^1.37.4"
flask-wtf = "^1.2.2"
flask-login = "^0.6.3"
defang = "^0.5.3"
psutil = "^7.2.2"
dateparser = "^1.3.0"
pydantic = "^2.12.5"
lookyloo-models = "^0.1.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
types-redis = {version = "^4.6.0.20241004"}
types-requests = "^2.32.4.20260324"
types-psutil = "^7.2.2.20260130"
types-dateparser = "^1.3.0.20260323"

[tool.poetry.group.old]
optional = true

[tool.poetry.group.old.dependencies]
plotly = "^6.1.2"
jupyter-dash = "^0.4.2"
jupyterlab = "^4.2.5"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
